Incoporate PR review feedback
Signed-off-by: Ashish Singh <ssashish@amazon.com>